--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "deploy": "ng build --base-href /pingpong-app/ && npx angular-cli-ghpages --dir dist/pingpong-app/browser",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "test:e2e": "playwright test"
   },
   "private": true,
   "dependencies": {
@@ -39,6 +40,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
-    "typescript": "~5.4.2"
+    "typescript": "~5.4.2",
+    "@playwright/test": "^1.54.2"
   }
 }
